--- a/inflation_forecasting.ipynb
+++ b/inflation_forecasting.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the data\n",
     "data = pd.read_csv('C:\\\\Users\\\\nisha\\\\Downloads\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965 (1)\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965.csv', skiprows=4)"
    ]
   },
@@ -68,10 +67,9 @@
     }
    ],
    "source": [
-    "# Display the first few rows\n",
+    "\n",
     "print(data.head())\n",
     "\n",
-    "# Check data types\n",
     "print(data.dtypes)"
    ]
   },
@@ -101,10 +99,8 @@
     }
    ],
    "source": [
-    "# Check for missing values\n",
-    "print(data.isnull().sum())\n",
     "\n",
-    "# Example of filling missing values using forward fill\n",
+    "print(data.isnull().sum())\n",
     "data.ffill(inplace=True)"
    ]
   },
@@ -134,7 +130,7 @@
     }
    ],
    "source": [
-    "# Verify if there are still missing values\n",
+    "\n",
     "print(data.isnull().sum())"
    ]
   },
@@ -145,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert year columns to datetime if necessary\n",
+    "\n",
     "data.columns = [str(col) if col.isdigit() else col for col in data.columns]"
    ]
   },
@@ -204,7 +200,7 @@
     }
    ],
    "source": [
-    "# Describe the data\n",
+    "\n",
     "print(data.describe())"
    ]
   },
@@ -305,16 +301,10 @@
     }
    ],
    "source": [
-    "# Select only numeric columns (excluding the first few non-numeric columns)\n",
+    "\n",
     "numeric_data = data.select_dtypes(include=['number'])\n",
-    "\n",
-    "# Check for any non-numeric values and convert them to NaN\n",
     "numeric_data = numeric_data.apply(pd.to_numeric, errors='coerce')\n",
-    "\n",
-    "# Now calculate the correlation matrix\n",
     "correlation_matrix = numeric_data.corr()\n",
-    "\n",
-    "# Display the correlation matrix\n",
     "print(correlation_matrix)"
    ]
   },
@@ -383,29 +373,22 @@
     "import pandas as pd\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
-    "# Load the data\n",
     "data = pd.read_csv('C:\\\\Users\\\\nisha\\\\Downloads\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965 (1)\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965.csv', skiprows=4)\n",
     "\n",
     "# Select data for the United States\n",
     "country_data = data[data['Country Name'] == 'United States']\n",
     "\n",
-    "# Transpose the data to have years as rows\n",
-    "inflation_series = country_data.iloc[:, 4:].T  # Select all columns from the 5th onward (years)\n",
+    "inflation_series = country_data.iloc[:, 4:].T \n",
     "\n",
-    "# Set the column name to 'United States'\n",
     "inflation_series.columns = ['United States']\n",
     "\n",
-    "# Check the structure of the transposed data\n",
-    "print(inflation_series.head())  # Preview the transposed data\n",
+    "print(inflation_series.head())\n",
     "\n",
-    "# Convert to numeric and drop any NaN values\n",
     "inflation_series = pd.to_numeric(inflation_series['United States'], errors='coerce').dropna()\n",
     "\n",
-    "# Fit the ARIMA model\n",
     "model = ARIMA(inflation_series, order=(1, 1, 1))\n",
     "model_fit = model.fit()\n",
     "\n",
-    "# Print the model summary\n",
     "print(model_fit.summary())\n"
    ]
   },
@@ -1165,31 +1148,25 @@
     "from prophet import Prophet\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Load the inflation data\n",
     "data = pd.read_csv('C:\\\\Users\\\\nisha\\\\Downloads\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965 (1)\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965.csv', skiprows=4)\n",
     "\n",
-    "# Prepare the data for Prophet by selecting data for the United States\n",
     "country_data = data[data['Country Name'] == 'United States']\n",
     "\n",
-    "# Exclude any non-year columns (columns that don't contain year values)\n",
-    "# We filter out any columns that aren't year numbers\n",
+    "\n",
     "year_columns = [col for col in country_data.columns[4:] if col.isdigit()]\n",
     "\n",
-    "# Prepare the data in Prophet format (ds: date, y: target variable)\n",
     "inflation_df = pd.DataFrame({\n",
-    "    'ds': pd.to_datetime(year_columns, format='%Y'),  # Date column\n",
-    "    'y': country_data.iloc[0, 4:len(year_columns) + 4].values  # Inflation data\n",
+    "    'ds': pd.to_datetime(year_columns, format='%Y'),\n",
+    "    'y': country_data.iloc[0, 4:len(year_columns) + 4].values\n",
     "})\n",
     "\n",
-    "# Fit the Prophet model\n",
+    "\n",
     "model = Prophet()\n",
     "model.fit(inflation_df)\n",
     "\n",
-    "# Forecast the next 10 years\n",
-    "future = model.make_future_dataframe(periods=10, freq='Y')  # Forecast for 10 future years\n",
+    "future = model.make_future_dataframe(periods=10, freq='Y')\n",
     "forecast = model.predict(future)\n",
     "\n",
-    "# Plot the forecast\n",
     "model.plot(forecast)\n",
     "plt.title('Inflation Forecast for United States')\n",
     "plt.show()\n"
@@ -1202,7 +1179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Lag1'] = data['2020'].shift(1)  # Replace '2020' with the column for the latest available year\n",
+    "data['Lag1'] = data['2020'].shift(1)\n",
     "data['Lag2'] = data['2020'].shift(2)"
    ]
   },
@@ -1227,35 +1204,30 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Assuming country_data has columns for the years and inflation values\n",
-    "# Generate lag features\n",
-    "# First, select only the numeric columns (years) from the data, ignoring other metadata columns\n",
-    "year_columns = country_data.columns[4:]  # Make sure this selects the correct columns for the years\n",
-    "inflation_values = country_data.iloc[0, 4:].values  # Get inflation values for the United States\n",
     "\n",
-    "# Convert the inflation values into a DataFrame for easier manipulation\n",
+    "year_columns = country_data.columns[4:]\n",
+    "inflation_values = country_data.iloc[0, 4:].values\n",
+    "\n",
+    "\n",
     "inflation_df = pd.DataFrame(inflation_values, columns=['Inflation'])\n",
     "inflation_df['Lag1'] = inflation_df['Inflation'].shift(1)\n",
     "inflation_df['Lag2'] = inflation_df['Inflation'].shift(2)\n",
     "\n",
-    "# Remove rows with NaN values caused by lagging\n",
     "inflation_df.dropna(inplace=True)\n",
     "\n",
-    "# Set the features (X) and target (y)\n",
-    "X = inflation_df[['Lag1', 'Lag2']]  # Lagged values as features\n",
-    "y = inflation_df['Inflation']  # Target: current inflation\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "X = inflation_df[['Lag1', 'Lag2']]\n",
+    "y = inflation_df['Inflation']\n",
+    "\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train the RandomForestRegressor\n",
+    "\n",
     "model = RandomForestRegressor()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
     "predictions = model.predict(X_test)\n",
     "\n",
-    "# Display predictions\n",
     "print(predictions)\n"
    ]
   },
@@ -1308,32 +1280,23 @@
     "import pandas as pd\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "# Load the dataset\n",
     "data = pd.read_csv('C:\\\\Users\\\\nisha\\\\Downloads\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965 (1)\\\\API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_3401965.csv', skiprows=4)\n",
     "\n",
-    "# Display the first few rows of the dataset to understand its structure\n",
     "print(\"Original Data:\")\n",
     "print(data.head())\n",
     "\n",
-    "# Select only the inflation data (numeric columns from 5th onward, i.e., the year columns)\n",
     "X = data.iloc[:, 4:].dropna(axis=0, how='any')  # Inflation data for all countries\n",
     "\n",
-    "# Display the shape of X to see how many rows and columns it has\n",
     "print(\"Shape of X after dropping NaN values:\", X.shape)\n",
     "\n",
-    "# Ensure that the data is numeric (sometimes the columns may not be properly formatted)\n",
     "X = X.apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "# Check if X is empty before fitting the KMeans model\n",
     "if not X.empty:\n",
-    "    # Fit the KMeans model\n",
     "    kmeans = KMeans(n_clusters=3, random_state=42)\n",
     "    kmeans.fit(X)\n",
     "\n",
-    "    # Add the clusters back to the original dataset\n",
     "    data['Cluster'] = kmeans.labels_\n",
     "\n",
-    "    # Display the data with cluster labels\n",
     "    print(data[['Country Name', 'Cluster']])\n",
     "else:\n",
     "    print(\"No valid data available for clustering.\")"
@@ -1359,18 +1322,14 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Sample data (replace with your actual data)\n",
-    "X = np.random.rand(100, 5)  # Features\n",
-    "y = np.random.rand(100)      # Target variable\n",
+    "X = np.random.rand(100, 5)\n",
+    "y = np.random.rand(100)\n",
     "\n",
-    "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Define and train the Random Forest model\n",
-    "model = RandomForestRegressor()  # Create the model\n",
-    "model.fit(X_train, y_train)      # Train the model\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the Random Forest model\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
@@ -1406,9 +1365,9 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
-    "# Assuming X is your dataset\n",
-    "kmeans = KMeans(n_clusters=3)  # Specify the number of clusters\n",
-    "kmeans.fit(X)  # Fit the KMeans model to the data\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=3)\n",
+    "kmeans.fit(X)\n",
     "\n",
     "score = silhouette_score(X, kmeans.labels_)  # Now you can access labels_\n",
     "print(f'Silhouette Score: {score}')"
@@ -1455,7 +1414,7 @@
     "model = XGBRegressor(n_estimators=100, learning_rate=0.05)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predictions\n",
+    "\n",
     "y_pred = model.predict(X_test)"
    ]
   },
@@ -1479,14 +1438,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd  # Import pandas to create a DataFrame\n",
+    "import pandas as pd\n",
     "\n",
-    "# Assuming feature_names is a list of your feature names\n",
-    "# Update the feature_names list to match the number of columns in X\n",
-    "feature_names = ['feature1', 'feature2', 'feature3', 'feature4', 'feature5']  # Added 'feature5'\n",
+    "feature_names = ['feature1', 'feature2', 'feature3', 'feature4', 'feature5']\n",
     "\n",
-    "# If X is a NumPy array, convert it to a DataFrame\n",
-    "X = pd.DataFrame(X, columns=feature_names)  # Create a DataFrame with column names\n",
+    "\n",
+    "X = pd.DataFrame(X, columns=feature_names)\n",
     "\n",
     "feature_importances = model.feature_importances_\n",
     "indices = np.argsort(feature_importances)[::-1]\n",
@@ -1523,13 +1480,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Simulate a scenario where GDP decreases and unemployment rises\n",
+    "\n",
     "future_scenario = pd.DataFrame({\n",
-    "    'Lag1': [3.5, 4.0, 4.2],  # Hypothetical future values\n",
+    "    'Lag1': [3.5, 4.0, 4.2],\n",
     "    'Lag2': [3.0, 3.5, 3.7],\n",
-    "    'Feature3': [0, 0, 0],    # Placeholder values for additional features\n",
-    "    'Feature4': [0, 0, 0],    # Placeholder values for additional features\n",
-    "    'Feature5': [0, 0, 0]     # Placeholder values for additional features\n",
+    "    'Feature3': [0, 0, 0],\n",
+    "    'Feature4': [0, 0, 0],\n",
+    "    'Feature5': [0, 0, 0]\n",
     "})\n",
     "\n",
     "predictions_scenario = model.predict(future_scenario)\n",
@@ -2507,14 +2464,12 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "# Define the inflation_df DataFrame with sample data\n",
     "data = {\n",
     "    'ds': ['2020-01-01', '2020-02-01', '2020-03-01', '2020-04-01', '2020-05-01'],\n",
     "    'y': [1.5, 1.6, 1.7, 1.8, 1.9]\n",
     "}\n",
     "inflation_df = pd.DataFrame(data)\n",
     "\n",
-    "# Create the line plot\n",
     "fig = px.line(inflation_df, x='ds', y='y', title='Inflation Trends Over Time')\n",
     "fig.show()"
    ]
@@ -2537,17 +2492,16 @@
     }
    ],
    "source": [
-    "import pandas as pd  # Import pandas to work with DataFrames\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming 'data' is a dictionary, convert it to a DataFrame\n",
-    "data = pd.DataFrame(data)  # Convert the dictionary to a DataFrame\n",
+    "data = pd.DataFrame(data)\n",
     "\n",
-    "# Select only numeric columns for correlation\n",
-    "numeric_data = data.select_dtypes(include=['number'])  # Keep only numeric columns\n",
     "\n",
-    "corr_matrix = numeric_data.corr()  # Calculate the correlation matrix\n",
+    "numeric_data = data.select_dtypes(include=['number'])\n",
+    "\n",
+    "corr_matrix = numeric_data.corr()\n",
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm')\n",
     "plt.title('Correlation Matrix')\n",
